--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^5.0.0",
     "loopback-connector-mongodb": "^3.2.1",
+    "loopback-datasource-juggler": "^3.13.0",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^2.0.0"
   },
