--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "posttest": "npm run lint && nsp check"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
+    "ejs": "^2.5.7",
     "event-stream": "^3.3.4",
     "helmet": "^1.3.0",
     "loopback": "^3.0.0",
