--- a/common/models/settings.json
+++ b/common/models/settings.json
@@ -42,5 +42,14 @@
       "permission": "ALLOW"
     }
   ],
-  "methods": {}
+  "methods": {},
+  "mixins":{
+    "DisableAllMethods":{
+      "expose":[ 
+        "findOne", 
+        "updateAttributes",
+        "count"
+      ]
+    }
+  }
 }
