--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "loopback": "^3.0.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^5.0.0",
+    "loopback-component-storage": "^3.3.1",
     "loopback-connector-mongodb": "^3.2.1",
     "loopback-datasource-juggler": "^3.13.0",
     "serve-favicon": "^2.0.1",
