--- a/server/config.json
+++ b/server/config.json
@@ -17,6 +17,10 @@
       "extended": true,
       "limit": "100kb"
     },
-    "cors": false
-  }
+    "cors": false,
+    "errorHandler": {
+      "disableStackTrace": false
+    }
+  },
+  "legacyExplorer": false
 }
